--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -12,12 +12,14 @@
 }
 #mars
 {
+	margin-top: 50px;
 	background-size: 250px;
 	width: 250px;
 	height: 250px;
 }
 #saturn
 {
+	margin-top: 50px;
 	background-size: 250px;
 	width: 250px;
 	height: 250px;
