--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -13,6 +13,7 @@
 #mars
 {
 	margin-top: 50px;
+	margin-left: 50px;
 	background-size: 250px;
 	width: 250px;
 	height: 250px;
@@ -26,12 +27,14 @@
 }
 #mercury
 {
+	margin-top: 50px;
 	background-size: 250px;
 	width: 250px;
 	height: 250px;
 }
 #neptune
 {
+	margin-top: 50px;
 	background-size: 250px;
 	width: 250px;
 	height: 250px;
