--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -44,4 +44,16 @@
 	font: 16px Georgia;
 	margin-top: 50px;
 	margin-left: 50px;
+	margin-right: 120px;
+	border: 3px solid #000000;
+}
+#tblfont th
+{
+	font: 18px Georgia;
+	border: 2px solid #000000;
+}
+#tblfont td
+{
+	font: 18px Georgia;
+	border: 1px solid #000000;
 }
