setting a background color
will implement a easier font color next

--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -1,3 +1,7 @@
+#fontbody
+{
+	background-color: #21374B;
+}
 #fontbody h1
 {
 	font: 30px Georgia;
@@ -41,12 +45,12 @@
 }
 #tblfont
 {
-	font: 16px Georgia;
+	font: 16px #E7DACB Georgia;
 	margin-top: 50px;
 	margin-left: 50px;
 	margin-right: 130px;
 	border: 2px solid #000000;
-	background: #E7DACB;
+	background: ;
 }
 #tblfont th
 {
