--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -51,7 +51,7 @@
 	margin-left: 50px;
 	margin-right: 130px;
 	border: 2px solid #000000;
-	background: ;
+	background-color: #000000;
 }
 #tblfont th
 {
