--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -56,6 +56,7 @@
 	margin-right: 50px;
 	margin-bottom: 50px;
 	text-align: center;
+	background-color: #000000;
 }
 #tblfont th
 {
@@ -66,8 +67,9 @@
 }
 #tblfont td
 {
-	border: 2px solid #E7DACB;
-	padding: 5px 10px;
+	border-bottom: 2px solid #E7DACB;
+	padding: 0px 5px;
 	font: 16px Georgia;
 	font-weight: bold;
+	
 }
