--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -65,6 +65,10 @@
 	border-radius: 10px;
 	background-color: #000000;
 }
+#tblfont h2
+{
+	font: 45px Georgia;
+}
 #tblfont th
 {
 	border: 2px solid #E7DACB;
