--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -62,12 +62,13 @@
 	margin-right: 50px;
 	margin-bottom: 50px;
 	text-align: center;
-	border-radius: 10px;
+	border-radius: 30px;
 	background-color: #000000;
 }
 #tblfont h2
 {
 	font: 45px Georgia;
+	background-color: #0D133B;
 }
 #tblfont th
 {
