--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -59,7 +59,7 @@
 {
 	margin-top: 50px;
 	margin-left: 50px;
-	margin-right: 50px;
+	margin-right: 125px;
 	margin-bottom: 50px;
 	text-align: center;
 	border-radius: 30px;
@@ -91,6 +91,6 @@ tr:hover
 #marsfaq
 {
 	border-radius: 30px;
-	background-color: #AEB6BF;
+	background-color: #7B2A3B;
 }
 
