--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -94,5 +94,14 @@ tr:hover
 	background-color: #7B2A3B;
 	margin-left: 50px;
 	margin-right: 125px;
+	
+}
+#saturnfaq
+{
+	border-radius: 30px;
+	background-color: #7B2A3B;
+	margin-left: 50px;
+	margin-right: 125px;
+	
 }
 
