testing color bubbles
testing which color works well with the fact bubbles

--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -94,7 +94,7 @@ tr:hover
 #marsfaq
 {
 	border-radius: 30px;
-	background-color: #7B2A3B;
+	background-color: #280D4F;
 	margin-left: 50px;
 	margin-right: 125px;
 	
@@ -102,7 +102,7 @@ tr:hover
 #saturnfaq
 {
 	border-radius: 30px;
-	background-color: #7B2A3B;
+	background-color: #515673;
 	margin-left: 50px;
 	margin-right: 125px;
 	
@@ -110,7 +110,7 @@ tr:hover
 #mercuryfaq
 {
 	border-radius: 30px;
-	background-color: #7B2A3B;
+	background-color: #302A59;
 	margin-left: 50px;
 	margin-right: 125px;
 	
