--- a/css/tbl-css.css
+++ b/css/tbl-css.css
@@ -95,32 +95,42 @@ tr:hover
 {
 	border-radius: 30px;
 	background-color: #170333;
-	margin-left: 50px;
-	margin-right: 125px;
-	
+	margin-left: 200px;
+	margin-right: 400px;
+	white-space: pre;
 }
 #saturnfaq
 {
 	border-radius: 30px;
 	background-color: #170333;
-	margin-left: 50px;
-	margin-right: 125px;
-	
+	margin-left: 200px;
+	margin-right: 400px;
+	white-space: pre;
 }
 #mercuryfaq
 {
 	border-radius: 30px;
 	background-color: #170333;
-	margin-left: 50px;
-	margin-right: 125px;
-	
+	margin-left: 200px;
+	margin-right: 400px;
+	white-space: pre;
 }
 #neptunefaq
+{
+	border-radius: 30px;
+	background-color: #170333;
+	margin-left: 200px;
+	margin-right: 400px;
+	white-space: pre;
+	margin-bottom: 50px;
+}
+#neptunefaq:hover
 {
 	border-radius: 30px;
 	background-color: #170333;
 	margin-left: 50px;
 	margin-right: 125px;
 	margin-bottom: 50px;
+	transform: scale(1.05);
 }
 
